force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>IO Invoice</label>
    <nameField>
        <displayFormat>INV-{000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IO Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>