force-app/main/default/objects/Invoice__c/fields/Ads_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ads_Cost__c</fullName>
    <label>Ads Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>