force-app/main/default/objects/Invoice__c/fields/Client_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Campaign_Name__c</fullName>
    <label>Client Campaign Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>