force-app/main/default/objects/Invoice__c/fields/IO__c.field-meta.xml
<CustomField>
    <fullName>IO__c</fullName>
    <label>IO</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>IO Invoices</relationshipLabel>
    <relationshipName>Contract_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>