force-app/main/default/objects/Invoice__c/fields/Message_displayed_on_invoice__c.field-meta.xml
<CustomField>
    <fullName>Message_displayed_on_invoice__c</fullName>
    <label>Message displayed on invoice</label>
    <type>TextArea</type>
</CustomField>