force-app/main/default/objects/Invoice__c/fields/Social_Cost__c.field-meta.xml
<CustomField>
    <fullName>Social_Cost__c</fullName>
    <label>Social Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>