force-app/main/default/objects/Invoice__c/fields/Total_TTD_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_TTD_Cost__c</fullName>
    <label>Total TTD Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>