force-app/main/default/objects/Invoice__c/fields/TTD_Cost__c.field-meta.xml
<CustomField>
    <fullName>TTD_Cost__c</fullName>
    <label>TTD Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>